[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "healthchecks-utilities"
version = "0.1.0"
description = "Utilities for monitoring domain health and expiry using Healthchecks.io"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Healthchecks Utilities Contributors"}
]
dependencies = [
    "requests==2.32.3",
    "python-dotenv==1.1.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
    "flake8>=7.0.0",
]


[tool.setuptools]
packages = ["healthchecks_utilities"]
package-dir = {"healthchecks_utilities" = "src"}

[project.scripts]
healthchecks-utilities = "healthchecks_utilities.cli:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
